--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-node": "^1.2.4",
-    "@sveltejs/kit": "^1.5.0",
+    "@sveltejs/adapter-auto": "3.1.1",
+    "@sveltejs/adapter-node": "5.0.1",
+    "@sveltejs/kit": "^2.5.3",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.26.0",
+    "eslint-plugin-svelte": "^2.30.0",
     "postcss": "8.4.35",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.2",
     "sass": "^1.62.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.3.0",
+    "vite": "^5.1.5",
     "vite-plugin-iso-import": "^1.1.0"
   },
   "type": "module",
